--- a/match-ds4/style.css
+++ b/match-ds4/style.css
@@ -1,6 +1,6 @@
 /*BEGIN PS4 Controller Styling*/
 .controller.ds4 {
-    background: url(base.svg);
+    background: url(base.png);
     height: 598px;
     width: 806px;
     /*    margin-left: -403px;
@@ -8,7 +8,7 @@
   }
   
   .ds4.disconnected {
-    background: url(disconnected.svg);
+    background: url(disconnected.png);
   }
   
   .ds4.disconnected div {
@@ -25,7 +25,7 @@
   .ds4 .trigger {
     width: 99px;
     height: 100%;
-    background: url(triggers.svg);
+    background: url(triggers.png);
     opacity: 0;
   }
   
@@ -41,7 +41,7 @@
   .ds4 .bumper {
     width: 99px;
     height: 23px;
-    background: url(bumper.svg) no-repeat;
+    background: url(bumper.png) no-repeat;
     opacity: 0;
   }
   
@@ -77,7 +77,7 @@
   }
   
   .ds4 .touchpad.pressed {
-    background: url(touchpad.svg) no-repeat center;
+    background: url(touchpad.png) no-repeat center;
   }
   
   .ds4 .meta {
@@ -89,7 +89,7 @@
   }
   
   .ds4 .meta.pressed {
-    background: url(meta.svg) no-repeat center;
+    background: url(meta.png) no-repeat center;
   }
   .ds4 .arrows {
     position: absolute;
@@ -101,7 +101,7 @@
   
   .ds4 .back,
   .ds4 .start {
-    background: url(start.svg);
+    background: url(start.png);
     width: 28px;
     height: 46px;
     opacity: 0;
@@ -137,7 +137,7 @@
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(face.svg);
+    background: url(face.png);
   }
   
   .ds4 .button.pressed {
@@ -177,7 +177,7 @@
   
   .ds4 .stick {
     position: absolute;
-    background: url(sticks.svg);
+    background: url(sticks.png);
     height: 94px;
     width: 94px;
   }
@@ -209,7 +209,7 @@
   }
   
   .ds4 .face {
-    background: url(dpad.svg);
+    background: url(dpad.png);
     position: absolute;
   }
   
